# Django-Arch

./: .gitignore  .gitlab-ci.yml  BACKEND.md  README.md  example.env  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/administration/: admin.py  apps.py  models.py  serializers.py  translations.py  urls.py  views.py
apps/administration/migrations/: 0001_initial.py  0002_management_full_name_ky_management_full_name_ru_and_more.py  0003_structure.py  0004_alter_structure_type_vacancy.py  0005_anticorruptionmeasures.py  0006_alter_anticorruptionmeasures_description_and_more.py  0007_report_reportimage.py  0008_report_type.py  0009_titleadministration_and_more.py  0010_anticorruptionmeasures_content_html.py  0011_anticorruptionmeasures_image.py  0012_remove_anticorruptionmeasures_content_html.py
apps/base/: admin.py  apps.py  middleware.py  models.py  seriallizers.py  services.py  translations.py  urls.py  views.py
apps/base/migrations/: 0001_initial.py  0002_remove_headlinesmodel_title1_and_more.py  0003_footer_visitorstatistics_alter_cartmodel_options_and_more.py  0004_pagetitlesmodel.py  0005_portal.py  0006_rename_title_cartmodel_full_name_and_more.py  0007_latestnews.py  0008_visit.py  0009_visit_session_id.py  0010_remove_visit_session_id.py  0011_pagetitlesmodel_appeals_pagetitlesmodel_appeals_ky_and_more.py  0012_pagevisit_visitor_delete_visit.py  0013_alter_cartmodel_description_and_more.py
apps/district/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/district/migrations/: 0001_initial.py  0002_alter_typetitle_options.py  0003_remove_data_date_ky_remove_data_date_ru_and_more.py
apps/kenesh/: admin.py  apps.py  models.py  serializers.py  translations.py  urls.py  utils.py  views.py
apps/kenesh/migrations/: 0001_initial.py  0002_remove_councildocument_content_html_en_and_more.py  0003_alter_councildocument_section_deputies.py  0004_commission.py  0005_alter_councilsection_options.py  (+5 more)
apps/news/: admin.py  apps.py  models.py  paginations.py  serializers.py  translations.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  models.py  paginations.py  serializers.py  translation.py  urls.py  views.py
apps/testapp/: apps.py  models.py
core/: asgi.py  urls.py  wsgi.py  yasg.py
core/settings/: base.py  development.py  jazzmin.py  production.py
devops/: Dockerfile.back
devops/docker/: development.yaml  production.yaml
devops/entrypoints/: backend_start.sh
media/notifications/: Инфо_сайт_маркетплейс_final.docx
(+17 files in other folders)
